[package]
name = "atoi_radix10"
version = "0.2.0"
authors = ["Giles Cope <gilescope@gmail.com>", "Ivan Tham <pickfire@riseup.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly = []
simd = [ "core_simd" ]
# simd not available on stable till core_simd is.

[dependencies]
core_simd = { git="https://github.com/rust-lang/stdsimd.git", optional=true }

[dev-dependencies]
paste = "1.0"
criterion = {version="0.3", features=["html_reports"]}
heapless = "0.7"
numtoa = { git="https://github.com/gilescope/numtoa.git", branch="master" }
#criterion-cycles-per-byte = "0.1"

[[bench]]
name = "bench"
harness = false
