[package]
name = "atoi_radix10"
version = "0.2.0"
authors = ["Giles Cope <gilescope@gmail.com>", "Ivan Tham <pickfire@riseup.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly = []
simd = [ "wide" ]
# simd not available on stable till core_simd is.

[dependencies]
# version="*", 
wide = { git="https://github.com/gilescope/wide.git", branch="i16x16", optional=true }
#core_simd = { git="https://github.com/rust-lang/stdsimd.git", optional=true }

[dev-dependencies]
# Creating good test names:
paste = "1.0"
# Benchmarking:
criterion = {version="0.3", features=["html_reports"]}
#criterion-cycles-per-byte = "0.1"
# These are for creating test strings (in no_std)
heapless = "0.7"
numtoa = "0.2.4"
# Wasm testing:
wasm-bindgen-test = "0.3"

[[bench]]
name = "bench"
harness = false
