[package]
name = "atoi_radix10"
version = "0.0.1"
authors = ["Giles Cope <gilescope@gmail.com>", "Ivan Tham <pickfire@riseup.net>"]
edition = "2021"
description = "Parse strings as base 10 integers quickly (especially u64/u128)"
license = "MIT OR Apache-2.0"
keywords = ["parse", "atoi", "conversion", "integer"]
categories = ["parsing"]
repository = "https://github.com/gilescope/atoi_radix10"


[features]
default = []
simd = []

[dependencies]
# log = "*"
# env_logger = "*"
# version="*",
# safe_arch={ version="0.6", optional=true }
#wide = { git="https://github.com/gilescope/wide.git", branch="i16x16", optional=true }
#core_simd = { git="https://github.com/rust-lang/stdsimd.git", optional=true }

[dev-dependencies]
# Creating good test names:
paste = "1.0"
# Benchmarking:
criterion = {version="0.7", features=["html_reports"]}
#criterion-cycles-per-byte = "0.1"
# These are for creating test strings (in no_std)
heapless = "0.8"
numtoa = "0.3.0"
# Wasm testing:
wasm-bindgen-test = "0.3"
# We need to enable this as well for wasm:
getrandom = "0.3"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.3", features = ["wasm_js"]}

[[bench]]
name = "bench"
harness = false
